library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/SF360_Write_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit trail for Salesforce Headless 360 signed write intents and execution outcomes.</description>
    <label>SF360 Write Audit</label>
    <pluralLabel>SF360 Write Audits</pluralLabel>
    <nameField>
        <label>Write Audit Number</label>
        <type>AutoNumber</type>
        <displayFormat>WA-{0000000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>