library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/ActingKid__c.field-meta.xml
<CustomField>
    <fullName>ActingKid__c</fullName>
    <description>JWS key identifier used to sign the write intent.</description>
    <label>Acting KID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>