library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/ActingUser__c.field-meta.xml
<CustomField>
    <fullName>ActingUser__c</fullName>
    <description>Salesforce user identity that requested the write operation.</description>
    <label>Acting User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>SF360 Write Audits</relationshipLabel>
    <relationshipName>SF360_Write_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>