library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/ExecutionError__c.field-meta.xml
<CustomField>
    <fullName>ExecutionError__c</fullName>
    <description>Error details captured when write execution is rejected or fails.</description>
    <label>Execution Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>