library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/ExecutionStatus__c.field-meta.xml
<CustomField>
    <fullName>ExecutionStatus__c</fullName>
    <description>Execution outcome for the signed write intent.</description>
    <label>Execution Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <default>true</default>
                <label>pending</label>
            </value>
            <value>
                <fullName>executed</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>