library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/FieldDiff__c.field-meta.xml
<CustomField>
    <fullName>FieldDiff__c</fullName>
    <description>JSON field diff with before and after values, including FLS redaction markers.</description>
    <label>Field Diff</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>