library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/IdempotencyKey__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyKey__c</fullName>
    <description>Client-supplied idempotency key for create and upsert operations.</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>