library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/IntentJws__c.field-meta.xml
<CustomField>
    <fullName>IntentJws__c</fullName>
    <description>Signed write intent JWS captured before execution.</description>
    <label>Intent JWS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>