library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Write operation requested by the signed intent.</description>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>create</fullName>
            </value>
            <value>
                <fullName>upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>