library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordId__c</fullName>
    <description>Salesforce record Id targeted by the write operation.</description>
    <externalId>true</externalId>
    <label>Target Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>