library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Write_Audit__c/fields/TargetSObject__c.field-meta.xml
<CustomField>
    <fullName>TargetSObject__c</fullName>
    <description>API name of the Salesforce object targeted by the write operation.</description>
    <label>Target SObject</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>